# spotify_data_pipeline

./: .gitignore  avg_album_lenght_playlist.py  pyproject.toml  rapcaviar_albums.csv
config/: playlist.py
tools/: playlist.py
